Use StandardCharsets.UTF_8.