@@ -1,5 +1,7 @@
 package org.schabi.newpipe.extractor.services.soundcloud.linkHandler;
 
+import static org.schabi.newpipe.extractor.services.soundcloud.SoundcloudParsingHelper.SOUNDCLOUD_API_V2_URL;
+
 import org.schabi.newpipe.extractor.exceptions.ExtractionException;
 import org.schabi.newpipe.extractor.exceptions.ParsingException;
 import org.schabi.newpipe.extractor.exceptions.ReCaptchaException;
@@ -9,10 +11,8 @@ import org.schabi.newpipe.extractor.services.soundcloud.SoundcloudParsingHelper;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
-
-import static org.schabi.newpipe.extractor.services.soundcloud.SoundcloudParsingHelper.SOUNDCLOUD_API_V2_URL;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 
 public class SoundcloudSearchQueryHandlerFactory extends SearchQueryHandlerFactory {
 
@@ -48,9 +48,9 @@ public class SoundcloudSearchQueryHandlerFactory extends SearchQueryHandlerFacto
                 }
             }
 
-            return url + "?q=" + URLEncoder.encode(id, UTF_8) + "&client_id="
-                    + SoundcloudParsingHelper.clientId() + "&limit=" + ITEMS_PER_PAGE
-                    + "&offset=0";
+            return url + "?q=" + URLEncoder.encode(id, StandardCharsets.UTF_8.name())
+                    + "&client_id=" + SoundcloudParsingHelper.clientId()
+                    + "&limit=" + ITEMS_PER_PAGE + "&offset=0";
 
         } catch (final UnsupportedEncodingException e) {
             throw new ParsingException("Could not encode query", e);
