@@ -1,7 +1,6 @@
 package org.schabi.newpipe.extractor.services.youtube.extractors;
 
 import static org.schabi.newpipe.extractor.services.youtube.YoutubeParsingHelper.getCookieHeader;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 
 import com.grack.nanojson.JsonArray;
 import com.grack.nanojson.JsonParser;
@@ -16,6 +15,7 @@ import org.schabi.newpipe.extractor.suggestion.SuggestionExtractor;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -54,8 +54,9 @@ public class YoutubeSuggestionExtractor extends SuggestionExtractor {
                 + "?client=" + "youtube" //"firefox" for JSON, 'toolbar' for xml
                 + "&jsonp=" + "JP"
                 + "&ds=" + "yt"
-                + "&gl=" + URLEncoder.encode(getExtractorContentCountry().getCountryCode(), UTF_8)
-                + "&q=" + URLEncoder.encode(query, UTF_8);
+                + "&gl=" + URLEncoder.encode(getExtractorContentCountry().getCountryCode(),
+                StandardCharsets.UTF_8.name())
+                + "&q=" + URLEncoder.encode(query, StandardCharsets.UTF_8.name());
 
         String response = dl.get(url, getCookieHeader(), getExtractorLocalization()).responseBody();
         // trim JSONP part "JP(...)"
